Added values to variables in plot. Needs to be checked!

--- a/analyzing_log/utils_timeline_viz.ipynb
+++ b/analyzing_log/utils_timeline_viz.ipynb
@@ -774,7 +774,7 @@
    },
    "outputs": [],
    "source": [
-    "def family_usage(df,column,regex):\n",
+    "def action_usage(df,column,regex):\n",
     "    '''Given a regex, we detect its use using a particular column\n",
     "    and then extract a list of time coordinates for when\n",
     "    they were used. These coordinates are in the format (start_time, duration)\n",
@@ -882,7 +882,7 @@
     "    \n",
     "    for i,action in enumerate(to_plot):\n",
     "        if action in family_name_to_code.keys():\n",
-    "            action_use = family_usage(df,'Family',family_name_to_code[action])\n",
+    "            action_use = action_usage(df,'Family',family_name_to_code[action])\n",
     "            action_use = clean_coords(action_use)\n",
     "        else:\n",
     "            action_use = function_to_use[action](df)\n",
