Fixed bug in viz when using sliders and changed colors scheme

--- a/analyzing_log/utils_timeline_viz.ipynb
+++ b/analyzing_log/utils_timeline_viz.ipynb
@@ -568,8 +568,8 @@
     "                    'M':'Record',\n",
     "                    'Vd':'Detector',\n",
     "                    'Vw':'Wavelength',\n",
-    "                    'Vc':'Width',\n",
-    "                    'Vs':'Concentration',\n",
+    "                    'Vc':'Width', #c = cuvetteNode\n",
+    "                    'Vs':'Concentration', #s = \n",
     "                    'Vl':'Laser toggle',\n",
     "                    }\n",
     "def add_family(df):\n",
