Finished writing a first version of CVS detector in graph

--- a/analyzing_log/cvs_detector.ipynb
+++ b/analyzing_log/cvs_detector.ipynb
@@ -109,6 +109,7 @@
    },
    "source": [
     "## Quantitative CVS\n",
+    "### In table\n",
     "First we extract all of their tables at all time points, analyze them for CVS and find the maximum number of values of a variable that was part of a control variable strategy instance.\n",
     "For now, use of this skill relies on the following production rules (evaluated per variable):\n",
     "* more than 2 successive records were done where only the variable was changed\n",
@@ -174,7 +175,7 @@
     "            \n",
     "            \n",
     "            \n",
-    "def get_cvs_per_variable(df):\n",
+    "def get_cvs_per_variable_in_table(df):\n",
     "    tables = set(df['Table'])\n",
     "    cvs_final = {\"Battery voltage\":0,\n",
     "                        \"Area\":0,\n",
@@ -184,8 +185,6 @@
     "                        \"Concentration\":0}\n",
     "    for i,t in enumerate(tables):\n",
     "        table = read_table(t) #converts json string to dictionary\n",
-    "        pts = get_pts(table) #grab all points\n",
-    "        values = get_values_per_variable(pts)\n",
     "        cvs_final = {k:max(v,detect_cvs_quant_in_table(table)[k]) for k,v in cvs_final.iteritems()}\n",
     "    return cvs_final"
    ]
@@ -207,8 +206,74 @@
     }
    ],
    "source": [
-    "print get_cvs_per_variable(df1)\n",
-    "print get_cvs_per_variable(df2)"
+    "print get_cvs_per_variable_in_table(df1)\n",
+    "print get_cvs_per_variable_in_table(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def detect_cvs_quant_in_graph(points):\n",
+    "    cvs_variable = {\"Battery voltage\":0,\n",
+    "                        \"Area\":0,\n",
+    "                        \"Separation\":0,\n",
+    "                        \"Width\":0,\n",
+    "                        \"Wavelength\":0,\n",
+    "                        \"Concentration\":0}\n",
+    "\n",
+    "    values = get_values_per_variable(points)\n",
+    "    confounded = pts_are_confounded(values)\n",
+    "    if not confounded:\n",
+    "        #find the variable being changed\n",
+    "        for v,vals in values.iteritems():\n",
+    "            if len(vals) > 1:\n",
+    "                cvs_variable[v] = len(vals)\n",
+    "    return cvs_variable\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "def get_cvs_per_variable_in_graph(df):\n",
+    "    tables = set(df['Table'])\n",
+    "    cvs_final = {\"Battery voltage\":0,\n",
+    "                        \"Area\":0,\n",
+    "                        \"Separation\":0,\n",
+    "                        \"Width\":0,\n",
+    "                        \"Wavelength\":0,\n",
+    "                        \"Concentration\":0}\n",
+    "    for i,t in enumerate(tables):\n",
+    "        table = read_table(t) #converts json string to dictionary\n",
+    "        pts = get_pts(table,in_graph=True) #grab all points\n",
+    "#         print pts\n",
+    "        cvs_final = {k:max(v,detect_cvs_quant_in_graph(pts)[k]) for k,v in cvs_final.iteritems()}\n",
+    "#         print cvs_final\n",
+    "#         print '\\n'\n",
+    "    return cvs_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
+      "{'Battery voltage': 0, 'Area': 0, 'Width': 10, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print get_cvs_per_variable_in_graph(df1)\n",
+    "print get_cvs_per_variable_in_graph(df2)"
    ]
   },
   {
