Fixed cvs detector - now running on all analyzable students

--- a/analyzing_log/cvs_detector.ipynb
+++ b/analyzing_log/cvs_detector.ipynb
@@ -12,17 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 1\n",
     "%aimport utils_timeline_viz\n",
     "from utils_timeline_viz import *\n",
     "from utils_read_parsing import *\n",
+    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('ggplot')\n",
     "matplotlib.rcParams['figure.figsize'] = 25, 15\n",
@@ -35,6 +45,7 @@
     "collapsed": true
    },
    "source": [
+    "# Build dectectors\n",
     "## Quantitative CVS\n",
     "### In table\n",
     "First we extract all of their tables at all time points, analyze them for CVS and find the maximum number of values of a variable that was part of a control variable strategy instance.\n",
@@ -290,558 +301,89 @@
     "collapsed": true
    },
    "source": [
-    "## Let's run the detector on all students...\n",
+    "# Let's run the detector on all students...\n",
     "Since we don't yet have a metadata file to pull the right log data per student (and ingore student id that were test runs or unusable student data) were going to run the detector on all student ids have exactl one log file for each sims (~150)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "log_files_per_sim = {}\n",
+    "for sim in ['beers','capacitor']:\n",
+    "    log_files_per_sim[sim] = get_parsed_log_files_per_student_for_sim(sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ids = get_students_to_analyze()"
+    "ids = get_students_to_analyze()\n",
+    "table_cvs_df = pd.DataFrame(index =ids, columns = ['Battery voltage', 'Area', 'Separation','Wavelength','Width', 'Concentration'])\n",
+    "table_cvs_df = table_cvs_df.fillna(0)\n",
+    "for c in table_cvs_df.columns:\n",
+    "    table_cvs_df[[c]] = table_cvs_df[[c]].astype(int)\n",
+    "graph_cvs_df = table_cvs_df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11612162 beers\n",
-      "11612162 capacitor\n",
-      "13660166 beers\n",
-      "13660166 capacitor\n",
-      "41947147 beers\n",
-      "41947147 capacitor\n",
-      "64006159 beers\n",
-      "64006159 capacitor\n",
-      "15749160 beers\n",
-      "15749160 capacitor\n",
-      "The parsed file has no user events, only model events. No dataframe prepared.\n",
-      "16901162 beers\n",
-      "16901162 capacitor\n",
-      "51717164 beers\n",
-      "51717164 capacitor\n",
-      "10970160 beers\n",
-      "10970160 capacitor\n",
-      "17114169 beers\n",
-      "17114169 capacitor\n",
-      "17071167 beers\n",
-      "17071167 capacitor\n",
-      "17112137 beers\n",
-      "17112137 capacitor\n",
-      "19416160 beers\n",
-      "19416160 capacitor\n",
-      "11095146 beers\n",
-      "11095146 capacitor\n",
-      "11394167 beers\n",
-      "11394167 capacitor\n",
-      "89047164 beers\n",
-      "89047164 capacitor\n",
-      "13228164 beers\n",
-      "13228164 capacitor\n",
-      "11777163 beers\n",
-      "11777163 capacitor\n",
-      "13654167 beers\n",
-      "13654167 capacitor\n",
-      "86699164 beers\n",
-      "86699164 capacitor\n",
-      "15317162 beers\n",
-      "15317162 capacitor\n",
-      "14805169 beers\n",
-      "14805169 capacitor\n",
-      "10708152 beers\n",
-      "10708152 capacitor\n",
-      "15444164 beers\n",
-      "15444164 capacitor\n",
-      "13140165 beers\n",
-      "13140165 capacitor\n",
-      "15188167 beers\n",
-      "15188167 capacitor\n",
-      "10537160 beers\n",
-      "10537160 capacitor\n",
-      "18174154 beers\n",
-      "18174154 capacitor\n",
-      "12329163 beers\n",
-      "12329163 capacitor\n",
-      "17576140 beers\n",
-      "17576140 capacitor\n",
-      "17168593 beers\n",
-      "17168593 capacitor\n",
-      "13139162 beers\n",
-      "13139162 capacitor\n",
-      "17107166 beers\n",
-      "17107166 capacitor\n",
-      "17448165 beers\n",
-      "17448165 capacitor\n",
-      "19196162 beers\n",
-      "19196162 capacitor\n",
-      "17007153 beers\n",
-      "17007153 capacitor\n",
-      "17018157 beers\n",
-      "17018157 capacitor\n",
-      "19023153 beers\n",
-      "19023153 capacitor\n",
-      "14201151 beers\n",
-      "14201151 capacitor\n",
-      "90447168 beers\n",
-      "90447168 capacitor\n",
-      "15055169 beers\n",
-      "15055169 capacitor\n",
-      "13945160 beers\n",
-      "13945160 capacitor\n",
-      "12665164 beers\n",
-      "12665164 capacitor\n",
-      "15026512 beers\n",
-      "15026512 capacitor\n",
-      "12238164 beers\n",
-      "12238164 capacitor\n",
-      "13134165 beers\n",
-      "13134165 capacitor\n",
-      "12707161 beers\n",
-      "12707161 capacitor\n",
-      "59043165 beers\n",
-      "59043165 capacitor\n",
-      "10232160 beers\n",
-      "10232160 capacitor\n",
-      "24566161 beers\n",
-      "24566161 capacitor\n",
-      "77047160 beers\n",
-      "77047160 capacitor\n",
-      "17655165 beers\n",
-      "17655165 capacitor\n",
-      "17868168 beers\n",
-      "17868168 capacitor\n",
-      "12406161 beers\n",
-      "12406161 capacitor\n",
-      "19018165 beers\n",
-      "19018165 capacitor\n",
-      "18591168 beers\n",
-      "18591168 capacitor\n",
-      "11892169 beers\n",
-      "11892169 capacitor\n",
-      "19913165 beers\n",
-      "19913165 capacitor\n",
-      "83145167 beers\n",
-      "83145167 capacitor\n",
-      "16328144 beers\n",
-      "16328144 capacitor\n",
-      "13726167 beers\n",
-      "13726167 capacitor\n",
-      "46792161 beers\n",
-      "46792161 capacitor\n",
-      "10866146 beers\n",
-      "10866146 capacitor\n",
-      "13981167 beers\n",
-      "13981167 capacitor\n",
-      "18162165 beers\n",
-      "18162165 capacitor\n",
-      "18247165 beers\n",
-      "18247165 capacitor\n",
-      "23836160 beers\n",
-      "23836160 capacitor\n",
-      "10908162 beers\n",
-      "10908162 capacitor\n",
-      "12017165 beers\n",
-      "12017165 capacitor\n",
-      "19618321 beers\n",
-      "19618321 capacitor\n",
-      "85915167 beers\n",
-      "85915167 capacitor\n",
-      "17691169 beers\n",
-      "17691169 capacitor\n",
-      "16752165 beers\n",
-      "16752165 capacitor\n",
-      "13870641 beers\n",
-      "13870641 capacitor\n",
-      "19780165 beers\n",
-      "19780165 capacitor\n",
-      "22340167 beers\n",
-      "22340167 capacitor\n",
-      "11929166 beers\n",
-      "11929166 capacitor\n",
-      "19566168 beers\n",
-      "19566168 capacitor\n",
-      "19608154 beers\n",
-      "19608154 capacitor\n",
-      "17347163 beers\n",
-      "17347163 capacitor\n",
-      "13122150 beers\n",
-      "13122150 capacitor\n",
-      "19053161 beers\n",
-      "19053161 capacitor\n",
-      "16237162 beers\n",
-      "16237162 capacitor\n",
-      "15298166 beers\n",
-      "15298166 capacitor\n",
-      "15554169 beers\n",
-      "15554169 capacitor\n",
-      "53262971 beers\n",
-      "53262971 capacitor\n",
-      "16961152 beers\n",
-      "16961152 capacitor\n",
-      "19436162 beers\n",
-      "19436162 capacitor\n",
-      "14828163 beers\n",
-      "14828163 capacitor\n",
-      "17729162 beers\n",
-      "17729162 capacitor\n",
-      "10561164 beers\n",
-      "10561164 capacitor\n",
-      "12907149 beers\n",
-      "12907149 capacitor\n",
-      "19989152 beers\n",
-      "19989152 capacitor\n",
-      "19562150 beers\n",
-      "19562150 capacitor\n",
-      "18922151 beers\n",
-      "18922151 capacitor\n",
-      "16618163 beers\n",
-      "16618163 capacitor\n",
-      "24511163 beers\n",
-      "24511163 capacitor\n",
-      "16233163 beers\n",
-      "16233163 capacitor\n",
-      "14055131 beers\n",
-      "14055131 capacitor\n",
-      "26984162 beers\n",
-      "26984162 capacitor\n",
-      "17597160 beers\n",
-      "17597160 capacitor\n",
-      "18365162 beers\n",
-      "18365162 capacitor\n",
-      "16317166 beers\n",
-      "The parsed file has no user events, only model events. No dataframe prepared.\n",
-      "16317166 capacitor\n",
-      "10192168 beers\n",
-      "10192168 capacitor\n",
-      "19089138 beers\n",
-      "19089138 capacitor\n",
-      "12263156 beers\n",
-      "12263156 capacitor\n",
-      "55825144 beers\n",
-      "55825144 capacitor\n",
-      "16657165 beers\n",
-      "16657165 capacitor\n",
-      "19344143 beers\n",
-      "19344143 capacitor\n",
-      "17083161 beers\n",
-      "17083161 capacitor\n",
-      "27451164 beers\n",
-      "27451164 capacitor\n",
-      "78992166 beers\n",
-      "78992166 capacitor\n",
-      "17701169 beers\n",
-      "17701169 capacitor\n",
-      "12816168 beers\n",
-      "12816168 capacitor\n",
-      "10127163 beers\n",
-      "10127163 capacitor\n",
-      "82788161 beers\n",
-      "82788161 capacitor\n",
-      "19862157 beers\n",
-      "19862157 capacitor\n",
-      "12302161 beers\n",
-      "12302161 capacitor\n",
-      "19470169 beers\n",
-      "19470169 capacitor\n",
-      "15160164 beers\n",
-      "15160164 capacitor\n",
-      "13624169 beers\n",
-      "13624169 capacitor\n",
-      "15457134 beers\n",
-      "15457134 capacitor\n",
-      "11326321 beers\n",
-      "11326321 capacitor\n",
-      "19553138 beers\n",
-      "19553138 capacitor\n",
-      "15884161 beers\n",
-      "15884161 capacitor\n",
-      "17036164 beers\n",
-      "17036164 capacitor\n",
-      "23784336 beers\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sperez8\\AppData\\Local\\Continuum\\Anaconda2\\lib\\site-packages\\ipykernel\\__main__.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23784336 capacitor\n",
-      "23784336 beers\n",
-      "23784336 capacitor\n",
-      "36107164 beers\n",
-      "36107164 capacitor\n",
-      "No parsed file found for student 36107164 and sim capacitor\n",
-      "15072160 beers\n",
-      "15072160 capacitor\n",
-      "17931169 beers\n",
-      "17931169 capacitor\n",
-      "60000168 beers\n",
-      "60000168 capacitor\n",
-      "13578154 beers\n",
-      "13578154 capacitor\n",
-      "14261165 beers\n",
-      "14261165 capacitor\n",
-      "18527162 beers\n",
-      "18527162 capacitor\n",
-      "13407169 beers\n",
-      "13407169 capacitor\n",
-      "10420167 beers\n",
-      "10420167 capacitor\n",
-      "13193166 beers\n",
-      "13193166 capacitor\n",
-      "17502161 beers\n",
-      "17502161 capacitor\n",
-      "61406163 beers\n",
-      "61406163 capacitor\n",
-      "16606167 beers\n",
-      "16606167 capacitor\n",
-      "14302168 beers\n",
-      "14302168 capacitor\n",
-      "11384795 beers\n",
-      "11384795 capacitor\n",
-      "16136159 beers\n",
-      "16136159 capacitor\n",
-      "15496161 beers\n",
-      "15496161 capacitor\n",
-      "11997159 beers\n",
-      "11997159 capacitor\n",
-      "14088168 beers\n",
-      "14088168 capacitor\n",
-      "19933165 beers\n",
-      "19933165 capacitor\n",
-      "18866165 beers\n",
-      "18866165 capacitor\n",
-      "14002169 beers\n",
-      "14002169 capacitor\n",
-      "10375163 beers\n",
-      "10375163 capacitor\n",
-      "14293162 beers\n",
-      "14293162 capacitor\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "table_cvs_df = pd.DataFrame({'student id':ids, 'Battery voltage':0, 'Area':0, 'Separation':0,'Wavelength':0,'Width':0, 'Concentration':0})\n",
-    "table_cvs_df =  table_cvs_df.set_index('student id')\n",
-    "\n",
-    "for i,studentid in enumerate(ids):\n",
-    "    for sim in ['beers','capacitor']:\n",
-    "        print studentid,sim\n",
-    "        parsed_file = find_student_log_file(sim,studentid)\n",
-    "        if parsed_file:\n",
-    "            df = prep_parsing_data(parsed_file)\n",
+    "# table_cvs_df = pd.DataFrame({'student id':ids, 'Battery voltage':0, 'Area':0, 'Separation':0,'Wavelength':0,'Width':0, 'Concentration':0})\n",
+    "# table_cvs_df =  table_cvs_df.set_index('student id')\n",
+    "%aimport utils_read_parsing\n",
+    "for sim in ['beers','capacitor']:\n",
+    "    log_files = log_files_per_sim[sim]\n",
+    "    for sid,logs in log_files.iteritems():\n",
+    "#         if sid == 10866146:\n",
+    "        cvs_all_logs_table = {\"Battery voltage\":0,\"Area\":0,\"Separation\":0,\"Width\":0,\"Wavelength\":0,\"Concentration\":0}\n",
+    "        cvs_all_logs_graph = {\"Battery voltage\":0,\"Area\":0,\"Separation\":0,\"Width\":0,\"Wavelength\":0,\"Concentration\":0}\n",
+    "        #for each log file\n",
+    "#         print sim, sid, len(logs)\n",
+    "        for log in logs:\n",
+    "            df = prep_parsing_data(log)\n",
     "            if not df.empty:\n",
-    "                try:\n",
-    "                    cvs = get_cvs_per_variable_in_table(df)\n",
-    "                    for var, n_samples in cvs.iteritems():\n",
-    "                        if n_samples >0:\n",
-    "                            table_cvs_df.loc[studentid][var] = n_samples\n",
-    "                except:\n",
-    "                    print \"FAILED\"\n",
-    "                    pass\n",
-    "        else:\n",
-    "            print \"No parsed file found for student {0} and sim {1}\".format(studentid,sim)"
+    "                #we find the instances of CVS in this log file\n",
+    "                cvs_table = get_cvs_per_variable_in_table(df)\n",
+    "                cvs_graph = get_cvs_per_variable_in_graph(df)\n",
+    "                #we append them to a summary cvs\n",
+    "                cvs_all_logs_table = {k:max(v,cvs_table[k]) for k,v in cvs_all_logs_table.iteritems()}\n",
+    "                cvs_all_logs_graph = {k:max(v,cvs_graph[k]) for k,v in cvs_all_logs_graph.iteritems()}\n",
+    "            else:\n",
+    "                print sid, log\n",
+    "        #now we save to the data to our mega df\n",
+    "        for var, n_samples in cvs_all_logs_table.iteritems():\n",
+    "            if n_samples >0:\n",
+    "                table_cvs_df.set_value(sid, var, n_samples)\n",
+    "        for var, n_samples in cvs_all_logs_graph.iteritems():\n",
+    "            if n_samples >0:\n",
+    "                graph_cvs_df.set_value(sid, var, n_samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "table_cvs_df.to_csv('table_cvs_results.txt', sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "table_cvs_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt = table_cvs_df[['Wavelength','Width','Concentration']].plot.hist(alpha=0.7,bins=range(30),normed =True,ylim=(0,0.8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt = table_cvs_df[['Battery voltage','Area','Separation']].plot.hist(alpha=0.7,bins=range(30),normed =True,ylim=(0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_cvs_df = pd.DataFrame({'student id':ids, 'Battery voltage':0, 'Area':0, 'Separation':0,'Wavelength':0,'Width':0, 'Concentration':0})\n",
-    "graph_cvs_df =  graph_cvs_df.set_index('student id')\n",
-    "\n",
-    "for i,studentid in enumerate(ids):\n",
-    "    for sim in ['beers','capacitor']:\n",
-    "        parsed_file = find_student_log_file(sim,studentid)\n",
-    "        df = prep_parsing_data(parsed_file)\n",
-    "        if not df.empty:\n",
-    "            try:\n",
-    "                cvs = get_cvs_per_variable_in_graph(df)\n",
-    "                for var, n_samples in cvs.iteritems():\n",
-    "                    if n_samples >0:\n",
-    "                        graph_cvs_df.loc[studentid][var] = n_samples\n",
-    "            except:\n",
-    "                pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "table_cvs_df.to_csv('table_cvs_results.txt', sep='\\t')\n",
     "graph_cvs_df.to_csv('graph_cvs_results.txt', sep='\\t')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_cvs_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt = graph_cvs_df[['Wavelength','Width','Concentration']].plot.hist(alpha=0.7,bins=range(30),normed =True,ylim=(0,0.8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plt = graph_cvs_df[['Battery voltage','Area','Separation']].plot.hist(alpha=0.7,bins=range(30),normed =True,ylim=(0,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_cvs_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def binarize(number):\n",
-    "    if number >0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0\n",
-    "\n",
-    "graph_cvs_df2 = graph_cvs_df\n",
-    "for c in graph_cvs_df.columns:\n",
-    "    graph_cvs_df2[c] = graph_cvs_df.apply(lambda row: binarize(row[c]), axis=1)\n",
-    "    \n",
-    "table_cvs_df2 = table_cvs_df\n",
-    "for c in table_cvs_df.columns:\n",
-    "    table_cvs_df2[c] = table_cvs_df.apply(lambda row: binarize(row[c]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "graph_cvs_df2['sum'] = graph_cvs_df2.sum(axis=1)\n",
-    "table_cvs_df2['sum'] = table_cvs_df2.sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_cvs_df2.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
