Reformatted analysis report for improved readability and sharing

--- a/analyzing_log/cvs_skill_analysis_report.ipynb
+++ b/analyzing_log/cvs_skill_analysis_report.ipynb
@@ -1132,6 +1132,22 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.13"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {
+    "height": "40px",
+    "left": "762px",
+    "right": "20px",
+    "top": "66.1667px",
+    "width": "518px"
+   },
+   "toc_section_display": "none",
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
