--- a/analyzing_log/cvs_skill_analysis_report.ipynb
+++ b/analyzing_log/cvs_skill_analysis_report.ipynb
@@ -44,14 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "hideCode": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 1\n",
@@ -60,6 +69,7 @@
     "from utils_read_parsing import *\n",
     "import matplotlib.pyplot as plt\n",
     "from tabulate import tabulate\n",
+    "from scipy.stats import mannwhitneyu\n",
     "%matplotlib inline\n",
     "matplotlib.style.use('ggplot')\n",
     "matplotlib.rcParams['figure.figsize'] = 10, 7\n",
@@ -401,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -415,12 +425,12 @@
       "Mean sample size for each variable, excluding sample sizes of zero.\n",
       "---------------  ------------------\n",
       "                 Mean number of pts\n",
-      "Battery voltage  5.9\n",
-      "Area             6.0\n",
-      "Separation       5.8\n",
-      "Wavelength       8.3\n",
-      "Width            6.8\n",
-      "Concentration    6.4\n",
+      "Battery voltage  5.9 +/- 2.3\n",
+      "Area             6.0 +/- 3.0\n",
+      "Separation       5.8 +/- 2.5\n",
+      "Wavelength       8.3 +/- 4.7\n",
+      "Width            6.8 +/- 3.9\n",
+      "Concentration    6.4 +/- 2.8\n",
       "---------------  ------------------\n"
      ]
     }
@@ -429,7 +439,7 @@
     "print \"Mean sample size for each variable, excluding sample sizes of zero.\"\n",
     "p = [['',' Mean number of pts']]\n",
     "for v in variables:\n",
-    "    p.append([v,round(np.mean(table_cvs_df[table_cvs_df[v]!=0][v].values),1)])\n",
+    "    p.append([v,str(round(np.mean(table_cvs_df[table_cvs_df[v]!=0][v].values),1))+' +/- '+ str(round(np.std(table_cvs_df[table_cvs_df[v]!=0][v].values),1))])\n",
     "print tabulate(p)"
    ]
   },
@@ -536,6 +546,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Of all 149 students, 72 did the order CL and 77 did LC\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Of all {0} students, {1} did the order CL and {2} did LC\".format(len(table_cvs_df2), sum(table_cvs_df2['activity order']=='CL'),sum(graph_cvs_df2['activity order']=='LC'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "slideshow": {
@@ -609,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -617,23 +644,26 @@
      "output_type": "stream",
      "text": [
       "Mean sample size for each variable, excluding sample sizes of zero by activity order.\n",
-      "---------------  ---  ---\n",
-      "                 CL   LC\n",
-      "Battery voltage  5.8  6.1\n",
-      "Area             6.2  6.0\n",
-      "Separation       5.6  6.0\n",
-      "Wavelength       8.8  7.8\n",
-      "Width            7.7  6.0\n",
-      "Concentration    6.7  6.1\n",
-      "---------------  ---  ---\n"
+      "---------------  ----------  ----------  --------------  -------\n",
+      "                 CL          LC          Mann Whitney U  p-value\n",
+      "Battery voltage  5.8 +- 2.6  6.1 +- 2.0  541.0           0.155\n",
+      "Area             6.2 +- 3.2  6.0 +- 2.8  829.0           0.456\n",
+      "Separation       5.6 +- 2.2  6.0 +- 2.7  725.0           0.346\n",
+      "Wavelength       8.8 +- 4.4  7.8 +- 4.9  820.0           0.082\n",
+      "Width            7.7 +- 4.0  6.0 +- 3.6  647.5           0.002\n",
+      "Concentration    6.7 +- 3.1  6.1 +- 2.6  1020.0          0.133\n",
+      "---------------  ----------  ----------  --------------  -------\n"
      ]
     }
    ],
    "source": [
     "print \"Mean sample size for each variable, excluding sample sizes of zero by activity order.\"\n",
-    "p = [['','CL','LC']]\n",
+    "p = [['','CL','LC',\"Mann Whitney U\",'p-value']]\n",
     "for v in variables:\n",
-    "    p.append([v,round(np.mean(table_cvs_df[(table_cvs_df[v]!=0)&(table_cvs_df['activity order']=='CL')][v].values),1),round(np.mean(table_cvs_df[(table_cvs_df[v]!=0)&(table_cvs_df['activity order']=='LC')][v].values),1)])\n",
+    "    s_CL = table_cvs_df[(table_cvs_df[v]!=0)&(table_cvs_df['activity order']=='CL')][v].values\n",
+    "    s_LC = table_cvs_df[(table_cvs_df[v]!=0)&(table_cvs_df['activity order']=='LC')][v].values\n",
+    "    m,pv = mannwhitneyu(s_CL,s_LC)\n",
+    "    p.append([v,str(round(np.mean(s_CL),1))+' +- '+str(round(np.std(s_CL),1)),str(round(np.mean(s_LC),1))+' +- '+str(round(np.std(s_LC),1)),m,round(pv,3)])\n",
     "print tabulate(p)"
    ]
   },
@@ -1063,11 +1093,11 @@
    "skip_h1_title": false,
    "toc_cell": false,
    "toc_position": {
-    "height": "40px",
+    "height": "230px",
     "left": "762px",
     "right": "20px",
     "top": "66.1667px",
-    "width": "518px"
+    "width": "405px"
    },
    "toc_section_display": "none",
    "toc_window_display": true
